renaming action didKeyUp —> didKeyDown

--- a/addon/templates/components/mentionable-picker.hbs
+++ b/addon/templates/components/mentionable-picker.hbs
@@ -4,7 +4,7 @@
       <li>{{resultsPendingMessage}}</li>
     {{else}}
       {{#each results as | result |}}
-        <li onclick={{action "didSelectResult" result}} tabindex="0" onkeydown={{action "didKeyUp" result}}>{{result}}</li>
+        <li onclick={{action "didSelectResult" result}} tabindex="0" onkeydown={{action "didKeyDown" result}}>{{result}}</li>
       {{else}}
         <li>{{noResultsMessage}}</li>
       {{/each}}
