removing renderValue …at least for now

--- a/addon/templates/components/mentionable-textarea.hbs
+++ b/addon/templates/components/mentionable-textarea.hbs
@@ -1,7 +1,7 @@
 {{textarea
     classNames=elementClassNames
     type=type
-    value=renderValue
+    value=value
     placeholder=placeholder
     name=name
     aria-label=ariaLabel
