--- a/addon/templates/components/mentionable-input.hbs
+++ b/addon/templates/components/mentionable-input.hbs
@@ -1,7 +1,7 @@
 {{input
     classNames=elementClassNames
     type=type
-    value=renderValue
+    value=value
     placeholder=placeholder
     name=name
     aria-label=ariaLabel
