--- a/addon/templates/mentionable-picker.hbs
+++ b/addon/templates/mentionable-picker.hbs
@@ -7,4 +7,5 @@
   resultsPendingMessage=resultsPendingMessage
   noResultsMessage=noResultsMessage
   showPicker=showPicker
+  searchProperty=searchProperty
 }}
