adding support for custom rendering, renaming results —> matchingValues

--- a/addon/templates/mentionable-picker.hbs
+++ b/addon/templates/mentionable-picker.hbs
@@ -1,11 +1,12 @@
 {{mentionable-picker
-  results=results
-  selectedResult=selectedResult
-  didSelectResult=(action 'didSelectResult')
+  matchingValues=matchingValues
+  selectedValue=selectedValue
+  didSelectValue=(action 'didSelectValue')
   pickerClass=pickerClass
-  resultsPending=resultsPending
-  resultsPendingMessage=resultsPendingMessage
-  noResultsMessage=noResultsMessage
+  matchingValuesPending=matchingValuesPending
+  matchingValuesPendingMessage=matchingValuesPendingMessage
+  noMatchingValuesMessage=noMatchingValuesMessage
   showPicker=showPicker
   searchProperty=searchProperty
+  pickerItemPartial=pickerItemPartial
 }}
