--- a/addon/templates/components/mentionable-picker.hbs
+++ b/addon/templates/components/mentionable-picker.hbs
@@ -1,18 +1,20 @@
 {{#if showPicker}}
   <ul class="{{pickerClass}}" tabindex="0">
-    {{#if resultsPending}}
-      <li>{{resultsPendingMessage}}</li>
+    {{#if matchingValuesPending}}
+      <li>{{matchingValuesPendingMessage}}</li>
     {{else}}
-      {{#each results as | result |}}
-        <li onclick={{action "didSelectResult" result}} tabindex="0" onkeydown={{action "didKeyDown" result}}>
-          {{#if searchProperty}}
-            {{get result searchProperty}}
+      {{#each matchingValues as | value |}}
+        <li onclick={{action "didSelectValue" value}} tabindex="0" onkeydown={{action "didKeyDown" value}}>
+          {{#if pickerItemPartial}}
+            {{partial pickerItemPartial}}
+          {{else if searchProperty}}
+            {{get value searchProperty}}
           {{else}}
-            {{result}}
+            {{value}}
           {{/if}}
         </li>
       {{else}}
-        <li>{{noResultsMessage}}</li>
+        <li>{{noMatchingValuesMessage}}</li>
       {{/each}}
     {{/if}}
   </ul>
