--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,13 @@
+<a href="https://github.com/yakmada/ember-cli-mentionable"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+
 <h1>ember-cli-mentionable</h1>
+
+<p>An ember-cli addon allowing facebook style @mentions and #hashtags on inputs and textareas.</p>
+
+
+<h2>Installation</h2>
+<p><code>ember install ember-cli-mentionable</code></p>
+
 
 <h2>Basic usage</h2>
 <p>Pass an object with <code>values</code> as an array of strings.</p>
