--- a/app/templates/custom-template.hbs
+++ b/app/templates/custom-template.hbs
@@ -1,3 +1,4 @@
 {{!-- BEGIN-SNIPPET custom-template --}}
+<!-- custom-template.hbs -->
 <img src={{value.image}} width="20px" height="20px"> <span>{{value.name}}</span>
 {{!-- END-SNIPPET --}}
