--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -72,3 +72,7 @@
 {{code-snippet name="mentionable-textarea-1.hbs"}}
 {{code-snippet name="mentionableConfig1.js" class="controller"}}
 
+
+<h2>Including styles</h2>
+<p>If you wish to include the <code>scss</code> styles for the matching items dropdown, they can be imported</p>
+{{code-snippet name="import-styles.scss"}}
