allowing user to focus back to input when pressing escape

--- a/addon/templates/mentionable-picker.hbs
+++ b/addon/templates/mentionable-picker.hbs
@@ -1,7 +1,6 @@
 {{mentionable-picker
   matchingValues=matchingValues
   selectedValue=selectedValue
-  didSelectValue=(action 'didSelectValue')
   pickerClass=pickerClass
   matchingValuesPending=matchingValuesPending
   matchingValuesPendingMessage=matchingValuesPendingMessage
@@ -9,4 +8,6 @@
   showPicker=showPicker
   searchProperty=searchProperty
   pickerItemPartial=pickerItemPartial
+  didSelectValue=(action "didSelectValue")
+  focusInput=(action "focusInput")
 }}
