when picker is focused passing kepress back to input

--- a/addon/templates/mentionable-picker.hbs
+++ b/addon/templates/mentionable-picker.hbs
@@ -10,4 +10,5 @@
   pickerItemPartial=pickerItemPartial
   didSelectValue=(action "didSelectValue")
   focusInput=(action "focusInput")
+  updateKeypress=(action "updateKeypress")
 }}
