--- a/app/styles/ember-cli-mentionable.scss
+++ b/app/styles/ember-cli-mentionable.scss
@@ -8,8 +8,13 @@
     $font-color: hsl(0, 0%, 0%);
     $font-color-active: hsl(0, 0%, 0%);
     $font-color-hover: hsl(0, 0%, 0%);
+    $max-height: 200px;
+    $z-index: 100;
+
+    max-height: $max-height;
+    overflow-y: scroll;
     position: absolute;
-    z-index: 100;
+    z-index: $z-index;
     ul {
         width: auto;
         min-width: auto;
