--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,6 +5,9 @@
 <p>An ember-cli addon allowing facebook style @mentions and #hashtags on inputs and textareas.</p>
 
 
+<h2>Try it!</h2>
+{{mentionable-input config=tryItConfig value=tryIt placeholder="Type @ or # anywhere"}}
+
 <h2>Installation</h2>
 <p><code>ember install ember-cli-mentionable</code></p>
 
