only showing picker scrollbar when needed

--- a/app/styles/ember-cli-mentionable.scss
+++ b/app/styles/ember-cli-mentionable.scss
@@ -12,7 +12,7 @@
     $z-index: 100;
 
     max-height: $max-height;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: absolute;
     z-index: $z-index;
     box-shadow: $box-shadow;
